--- a/index.html
+++ b/index.html
@@ -6,59 +6,59 @@
     <meta name="description" content="This is the home page of Toblerone's website">
     <meta name="keywords" content="Toblerone, chocolate">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="noindex" />
-    <link rel="stylesheet" href="../coding/css/topnavbar.css">
-    <link rel="stylesheet" href="../coding/css/burgermenu.css">
-    <link rel="stylesheet" href="../coding/css/mystyle.css">
+    <meta name="robots" content="noindex">
+    <link rel="stylesheet" href="css/topnavbar.css">
+    <link rel="stylesheet" href="css/mystyle.css">
+    <link rel="stylesheet" href="css/burgermenu.css">
     <title>Toblerone | Home</title>
 </head>
 
 <body>
     <header class="header_container">
         <nav class="navigation_container">
-            <a href="../coding/index.html"><img class="logo" src="../coding/images/TobleroneLogo2.jpg" alt="Toblerone logo" ></a>
+            <a href="index.html"><img class="logo" src="images/TobleroneLogo2.jpg" alt="Toblerone logo"></a>
 
             <input class="menu-btn" type="checkbox" id="menu-btn">
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 
             <div class="menu navbar">
                 <div class="dropdown">
-                    <a href="../coding/index.html" class="nav_link selected_contentsection">Home</a>
+                    <a href="index.html" class="nav_link selected_contentsection">Home</a>
                     <div class="dropdown-content">
                     </div>
                 </div>
 
                 <div class="dropdown">
-                    <a href="../coding/subpages/products.html" class="nav_link">Products</a>
+                    <a href="subpages/products.html" class="nav_link">Products</a>
                     <div class="dropdown-content">
                     </div>
                 </div>
 
                 <div class="dropdown">
-                    <a href="../coding/subpages/ingredients.html" class="nav_link">Ingredients</a>
+                    <a href="subpages/ingredients.html" class="nav_link">Ingredients</a>
                     <div class="dropdown-content">
                     </div>
                 </div>
 
                 <div class="dropdown">
-                    <a href="../coding/subpages/recipes.html" class="nav_link">Recipes</a>
+                    <a href="subpages/recipes.html" class="nav_link">Recipes</a>
                     <div class="dropdown-content">
-                        <a href="../coding/subpages/recipes/fudge.html">Fudge</a>
-                        <a href="../coding/subpages/recipes/mousse.html">Chocolate mousse</a>
-                        <a href="../coding/subpages/recipes/cake.html">Hedgehog cake</a>
+                        <a href="subpages/recipes/fudge.html">Fudge</a>
+                        <a href="subpages/recipes/mousse.html">Chocolate mousse</a>
+                        <a href="subpages/recipes/cake.html">Hedgehog cake</a>
                     </div>
                 </div>
             </div>
 
             <ul class="mobilemenu">
-                <li><a href="../coding/index.html" class="nav_link selected_contentsection">Home</a></li>
-                <li><a href="../coding/subpages/products.html" class="nav_link">Products</a></li>
-                <li><a href="../coding/subpages/ingredients.html" class="nav_link">Ingredients</a></li>
-                <li><a href="../coding/subpages/recipes.html" class="nav_link">Recipes</a>
+                <li><a href="index.html" class="nav_link selected_contentsection">Home</a></li>
+                <li><a href="subpages/products.html" class="nav_link">Products</a></li>
+                <li><a href="subpages/ingredients.html" class="nav_link">Ingredients</a></li>
+                <li><a href="subpages/recipes.html" class="nav_link">Recipes</a>
                     <ul>
-                        <li><a href="../coding/subpages/recipes/fudge.html" class="nav_link menu_item">+ Fudge</a></li>
-                        <li><a href="../coding/subpages/recipes/mousse.html" class="nav_link menu_item">+ Chocolate mousse</a></li>
-                        <li><a href="../coding/subpages/recipes/cake.html" class="nav_link menu_item">+ Hedgehog cake</a></li>
+                        <li><a href="subpages/recipes/fudge.html" class="nav_link menu_item">+ Fudge</a></li>
+                        <li><a href="subpages/recipes/mousse.html" class="nav_link menu_item">+ Chocolate mousse</a></li>
+                        <li><a href="subpages/recipes/cake.html" class="nav_link menu_item">+ Hedgehog cake</a></li>
                     </ul>
                 </li>
             </ul>
@@ -67,20 +67,20 @@
 
     <main>
         <div class="offers_container">
-            <h1 class="heading1">New offers</h1>
-            <a href="../coding/subpages/products.html"><img class="index_image1" src="../coding/images/Toblerone1.jpg" alt="Toblerone Fruit & Nut"></a>
-            <img class="index_image2" src="../coding/images/Toblerone2.png" alt = "Toblerone Christmas special">
+            <div class="fade">
+                <img class="index_image1" id="fade1" src="images/offers.jpg" alt="Toblerone offers">
+                <a href="subpages/products.html"><img class="index_image1" id="fade2" src="images/chocolate1.jpg" alt="Toblerone Fruit & Nut"></a>
+                <img class="index_image2" id="fade3" src="images/chocolate2.jpg" alt="Toblerone Christmas special">
+            </div>
         </div>
     </main>
 
     <footer class="footer_container">
-        <h4 class = "footer_text">Social media</h4>
-        <div class = "social">
-        <a href="http://www.facebook.com"><img src="../coding/images/facebook.svg" alt="Facebook" class="footer_image" ></a><br>
-        <a href="http://wwww.twitter.com"><img src="../coding/images/twitter.svg" alt="Twitter" class="footer_image"></a><br>
-        <a href="http://www.instagram.com"><img src="../coding/images/instagram.svg" alt="Instagram" class="footer_image"></a>
+        <h4 class="footer_text">Social media</h4>
+        <div class="social">
+            <a href="http://www.facebook.com"><img src="images/facebook.svg" alt="Facebook" class="footer_image"></a><br>
+            <a href="http://wwww.twitter.com"><img src="images/twitter.svg" alt="Twitter" class="footer_image"></a><br>
+            <a href="http://www.instagram.com"><img src="images/instagram.svg" alt="Instagram" class="footer_image"></a>
         </div>
     </footer>
-</body>
-
-</html>
+</body></html>
